--- a/src/test/resources/documentation/flows.flowName.block.html
+++ b/src/test/resources/documentation/flows.flowName.block.html
@@ -5,7 +5,7 @@
     <p>Block step. Groups a sequence of steps into a named block.</p>
     <p><b>Keys:</b></p>
     <ul>
-        <li><code>block</code> <i>(object[]|string[], required)</i> &mdash; steps in the block</li>
+        <li><code>block</code> <i>(object[]|string[], required)</i> &mdash; steps to execute as a block</li>
         <li><code>error</code> <i>(object[]|string[])</i> &mdash; error handling steps</li>
         <li><code>loop</code> <i>(object)</i> &mdash; loop configuration</li>
         <li><code>meta</code> <i>(object)</i> &mdash; step metadata</li>
