--- a/src/test/resources/documentation/flows.flowName.try.html
+++ b/src/test/resources/documentation/flows.flowName.try.html
@@ -10,7 +10,7 @@
         <li><code>meta</code> <i>(object)</i> &mdash; step metadata</li>
         <li><code>name</code> <i>(string)</i> &mdash; step display name</li>
         <li><code>out</code> <i>(string|string[])</i> &mdash; output variable mappings</li>
-        <li><code>try</code> <i>(object[]|string[], required)</i> &mdash; steps to try</li>
+        <li><code>try</code> <i>(object[]|string[], required)</i> &mdash; steps to execute with error handling</li>
     </ul>
     <p><b>Example:</b></p>
     <pre><code>- try:
