--- a/src/test/resources/documentation/forms.formName.formField.html
+++ b/src/test/resources/documentation/forms.formName.formField.html
@@ -15,31 +15,31 @@
     <p><b>Keys by type:</b></p>
     <p><b>string</b></p>
     <ul>
-        <li><code>pattern</code> <i>(string)</i> &mdash; regular expression to validate the value</li>
-        <li><code>inputType</code> <i>(string)</i> &mdash; HTML input type (for example: <code>text</code>,
+        <li><code>inputType</code> <i>(string)</i> &mdash; input type (for example: <code>text</code>,
             <code>password</code>, <code>email</code>)
         </li>
-        <li><code>readonly</code> <i>(boolean)</i> &mdash; make the field read-only</li>
+        <li><code>pattern</code> <i>(regexp)</i> &mdash; regular expression to validate the value</li>
         <li><code>placeholder</code> <i>(string)</i> &mdash; short hint shown in the input</li>
+        <li><code>readOnly</code> <i>(boolean)</i> &mdash; make the field read-only</li>
         <li><code>search</code> <i>(boolean)</i> &mdash; allow searching in dropdown input</li>
     </ul>
     <p><b>int</b></p>
     <ul>
-        <li><code>min</code> <i>(integer)</i> &mdash; minimum value</li>
         <li><code>max</code> <i>(integer)</i> &mdash; maximum value</li>
-        <li><code>readonly</code> <i>(boolean)</i> &mdash; make the field read-only</li>
+        <li><code>min</code> <i>(integer)</i> &mdash; minimum value</li>
         <li><code>placeholder</code> <i>(string)</i> &mdash; short hint shown in the input</li>
+        <li><code>readOnly</code> <i>(boolean)</i> &mdash; make the field read-only</li>
     </ul>
     <p><b>decimal</b></p>
     <ul>
-        <li><code>min</code> <i>(integer)</i> &mdash; minimum value</li>
         <li><code>max</code> <i>(integer)</i> &mdash; maximum value</li>
-        <li><code>readonly</code> <i>(boolean)</i> &mdash; make the field read-only</li>
+        <li><code>min</code> <i>(integer)</i> &mdash; minimum value</li>
         <li><code>placeholder</code> <i>(string)</i> &mdash; short hint shown in the input</li>
+        <li><code>readOnly</code> <i>(boolean)</i> &mdash; make the field read-only</li>
     </ul>
     <p><b>boolean</b></p>
     <ul>
-        <li><code>readonly</code> <i>(boolean)</i> &mdash; make the field read-only</li>
+        <li><code>readOnly</code> <i>(boolean)</i> &mdash; make the field read-only</li>
     </ul>
     <p><b>file</b></p>
     <ul>
