--- a/src/test/resources/documentation/imports.git.html
+++ b/src/test/resources/documentation/imports.git.html
@@ -2,7 +2,7 @@
     <pre>git</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Git import definition Imports a remote Git repository into the process working directory</p>
+    <p>Git import definition. Imports a remote Git repository into the process working directory</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>dest</code> <i>(string)</i> &mdash; destination directory relative to the process working directory.
