--- a/src/test/resources/documentation/triggers.github.conditions.files.html
+++ b/src/test/resources/documentation/triggers.github.conditions.files.html
@@ -9,7 +9,7 @@
             specified patterns
         </li>
         <li><code>any</code> <i>(regexp|regexp[])</i> &mdash; match events that change any files with paths matching the
-            specifie
+            specified patterns"
         </li>
         <li><code>modified</code> <i>(regexp|regexp[])</i> &mdash; match events that modify files with paths matching
             the specified patterns
