--- a/src/test/resources/documentation/triggers.manual.html
+++ b/src/test/resources/documentation/triggers.manual.html
@@ -2,7 +2,7 @@
     <pre>manual</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Manual trigger definition Starts a process only when explicitly requested via UI or API</p>
+    <p>Manual trigger definition. Starts a process only when explicitly requested via UI or API</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>activeProfiles</code> <i>(string[])</i> &mdash; list of profiles that Concord applies for the process
