--- a/src/test/resources/documentation/triggers.github.conditions.files.any.html
+++ b/src/test/resources/documentation/triggers.github.conditions.files.any.html
@@ -2,4 +2,4 @@
     <pre>any</pre>
 </div>
 <div class='content'><p>Type: <code>regexp|regexp[]</code></p>
-    <p>Match events that change any files with paths matching the specifie</p></div>
+    <p>Match events that change any files with paths matching the specified patterns"</p></div>
