--- a/src/test/resources/documentation/configuation.processTimeout.html
+++ b/src/test/resources/documentation/configuation.processTimeout.html
@@ -2,4 +2,4 @@
     <pre>processTimeout</pre>
 </div>
 <div class='content'><p>Type: <code>string</code></p>
-    <p>Maximum process execution time (Format: ISO 8601 duration, e.g. PT1H)</p></div>
+    <p>Maximum process execution time (format: ISO 8601 duration, e.g. PT1H)</p></div>
