--- a/src/test/resources/documentation/configuation.suspendTimeout.html
+++ b/src/test/resources/documentation/configuation.suspendTimeout.html
@@ -2,4 +2,4 @@
     <pre>suspendTimeout</pre>
 </div>
 <div class='content'><p>Type: <code>string</code></p>
-    <p>Maximum time a process can stay in SUSPENDED state (Format: ISO 8601 duration)</p></div>
+    <p>Maximum time a process can stay in SUSPENDED state (format: ISO 8601 duration)</p></div>
