--- a/src/test/resources/documentation/flows.flowName.block.html
+++ b/src/test/resources/documentation/flows.flowName.block.html
@@ -2,7 +2,7 @@
     <pre>block</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Block step. Groups a sequence of steps into a named block.</p>
+    <p>Block step. Groups a sequence of steps into a named block</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>block</code> <i>(object[]|string[], required)</i> &mdash; steps to execute as a block</li>
