--- a/src/test/resources/documentation/flows.flowName.call.html
+++ b/src/test/resources/documentation/flows.flowName.call.html
@@ -2,7 +2,7 @@
     <pre>call</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Call step. Invokes another flow by name, optionally passing input/output parameters.</p>
+    <p>Call step. Invokes another flow by name, optionally passing input/output parameters</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>call</code> <i>(string, required)</i> &mdash; flow name to call</li>
