--- a/src/test/resources/documentation/flows.flowName.checkpoint.html
+++ b/src/test/resources/documentation/flows.flowName.checkpoint.html
@@ -2,11 +2,12 @@
     <pre>checkpoint</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Checkpoint step. Creates a named checkpoint for process restart.</p>
+    <p>Checkpoint step. Creates a named checkpoint for process restart</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>checkpoint</code> <i>(string, required)</i> &mdash; checkpoint name</li>
         <li><code>meta</code> <i>(object)</i> &mdash; step metadata</li>
     </ul>
     <p><b>Example:</b></p>
-    <pre><code>- checkpoint: "myCheckpoint"</code></pre></div>
+    <pre><code>- checkpoint: "myCheckpoint"</code></pre>
+</div>
