--- a/src/test/resources/documentation/flows.flowName.expr.html
+++ b/src/test/resources/documentation/flows.flowName.expr.html
@@ -2,7 +2,7 @@
     <pre>expr</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Expression step. Evaluates a single expression.</p>
+    <p>Expression step. Evaluates a single expression</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>error</code> <i>(object[]|string[])</i> &mdash; error handling steps</li>
