--- a/src/test/resources/documentation/flows.flowName.form.html
+++ b/src/test/resources/documentation/flows.flowName.form.html
@@ -2,7 +2,7 @@
     <pre>form</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Form step. Displays a form to collect user input and suspends the process.</p>
+    <p>Form step. Displays a form to collect user input and suspends the process</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>fields</code> <i>(expression|object[])</i> &mdash; form field definitions</li>
