--- a/src/test/resources/documentation/flows.flowName.if.html
+++ b/src/test/resources/documentation/flows.flowName.if.html
@@ -2,7 +2,7 @@
     <pre>if</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Conditional step. Evaluates an expression and executes 'then' or 'else' branches.</p>
+    <p>Conditional step. Evaluates an expression and executes 'then' or 'else' branches</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>else</code> <i>(object[]|string[])</i> &mdash; steps to execute when condition is false</li>
