--- a/src/test/resources/documentation/flows.flowName.parallel.html
+++ b/src/test/resources/documentation/flows.flowName.parallel.html
@@ -2,7 +2,7 @@
     <pre>parallel</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Parallel step. Executes a group of steps in parallel threads.</p>
+    <p>Parallel step. Executes a group of steps in parallel threads</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>meta</code> <i>(object)</i> &mdash; step metadata</li>
