--- a/src/test/resources/documentation/flows.flowName.script.html
+++ b/src/test/resources/documentation/flows.flowName.script.html
@@ -2,7 +2,7 @@
     <pre>script</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Script step. Executes an inline or external script (e.g. Groovy, JavaScript).</p>
+    <p>Script step. Executes an inline or external script (e.g. Groovy, JavaScript)</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>body</code> <i>(string)</i> &mdash; inline script body</li>
