--- a/src/test/resources/documentation/flows.flowName.switch.html
+++ b/src/test/resources/documentation/flows.flowName.switch.html
@@ -2,7 +2,7 @@
     <pre>switch</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Switch step. Evaluates an expression and executes the matching case branch.</p>
+    <p>Switch step. Evaluates an expression and executes the matching case branch</p>
     <p><b>Example:</b></p>
     <pre><code>- switch: ${action}
   start:
@@ -10,4 +10,5 @@
   stop:
     - log: "Stopping"
   default:
-    - log: "Unknown action"</code></pre></div>
+    - log: "Unknown action"</code></pre>
+</div>
