--- a/src/test/resources/documentation/flows.flowName.task.html
+++ b/src/test/resources/documentation/flows.flowName.task.html
@@ -2,7 +2,7 @@
     <pre>task</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Task step. Executes a registered task plugin (e.g. http, smtp, docker).</p>
+    <p>Task step. Executes a registered task plugin (e.g. http, smtp, docker)</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>error</code> <i>(object[]|string[])</i> &mdash; error handling steps</li>
