--- a/src/test/resources/documentation/flows.flowName.try.html
+++ b/src/test/resources/documentation/flows.flowName.try.html
@@ -2,7 +2,7 @@
     <pre>try</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Try step. Executes steps with error handling support.</p>
+    <p>Try step. Executes steps with error handling support</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>error</code> <i>(object[]|string[])</i> &mdash; error handling steps</li>
