--- a/src/test/resources/documentation/forms.formName.formField.html
+++ b/src/test/resources/documentation/forms.formName.formField.html
@@ -1,12 +1,13 @@
-<div class='definition'><pre>fullName</pre></div>
-<div class='content'>
-    <p>Type: <code>object</code></p>
-    <p>Form field definition. Submitted value is stored in <code>myForm.fullName</code>.</p>
+<div class='definition'>
+    <pre>fullName</pre>
+</div>
+<div class='content'><p>Type: <code>object</code></p>
+    <p>Form field definition. Submitted value is stored in <code>myForm.fullName</code></p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>type</code> <i>(string)</i> &mdash; field type: <code>string</code>, <code>int</code>,
-            <code>decimal</code>, <code>boolean</code>, <code>file</code> (cardinality: <code>?</code>,
-            <code>+</code>, <code>*</code>)
+            <code>decimal</code>, <code>boolean</code>, <code>file</code> (cardinality: <code>?</code>, <code>+</code>,
+            <code>*</code>)
         </li>
         <li><code>label</code> <i>(string)</i> &mdash; human-readable label</li>
         <li><code>value</code> <i>(any)</i> &mdash; default value expression, evaluated when the form is called</li>
@@ -47,6 +48,4 @@
         </li>
     </ul>
     <p><b>Cardinality:</b> <code>string</code> single, <code>string?</code> optional, <code>string+</code> one or more,
-        <code>string*</code> zero or more
-    </p>
-</div>
+        <code>string*</code> zero or more</p></div>
