--- a/src/test/resources/documentation/imports.git.dest.html
+++ b/src/test/resources/documentation/imports.git.dest.html
@@ -2,4 +2,4 @@
     <pre>dest</pre>
 </div>
 <div class='content'><p>Type: <code>string</code></p>
-    <p>Destination directory relative to the process working directory. Default: ./concord/</p></div>
+    <p>Destination directory relative to the process working directory (default: ./concord/)</p></div>
