--- a/src/test/resources/documentation/imports.git.html
+++ b/src/test/resources/documentation/imports.git.html
@@ -5,8 +5,8 @@
     <p>Git import definition. Imports a remote Git repository into the process working directory</p>
     <p><b>Keys:</b></p>
     <ul>
-        <li><code>dest</code> <i>(string)</i> &mdash; destination directory relative to the process working directory.
-            Default: ./concord/
+        <li><code>dest</code> <i>(string)</i> &mdash; destination directory relative to the process working directory
+            (default: ./concord/)
         </li>
         <li><code>exclude</code> <i>(regexp[])</i> &mdash; list of regular expression patterns to exclude files during
             import
@@ -21,6 +21,6 @@
         <li><code>url</code> <i>(string)</i> &mdash; repository URL in http(s) or git@ format. Mutually exclusive with
             name
         </li>
-        <li><code>version</code> <i>(string)</i> &mdash; branch, tag, or commit ID to use. Default: master</li>
+        <li><code>version</code> <i>(string)</i> &mdash; branch, tag, or commit ID to use (default: master)</li>
     </ul>
 </div>
