--- a/src/test/resources/documentation/imports.mvn.dest.html
+++ b/src/test/resources/documentation/imports.mvn.dest.html
@@ -2,5 +2,5 @@
     <pre>dest</pre>
 </div>
 <div class='content'><p>Type: <code>string</code></p>
-    <p>Destination directory (relative to the process working directory) to extract the artifact into.
-        Default: ./concord/</p></div>
+    <p>Destination directory (relative to the process working directory) to extract the artifact into (default:
+        ./concord/)</p></div>
