--- a/src/test/resources/documentation/imports.mvn.html
+++ b/src/test/resources/documentation/imports.mvn.html
@@ -6,7 +6,7 @@
     <p><b>Keys:</b></p>
     <ul>
         <li><code>dest</code> <i>(string)</i> &mdash; destination directory (relative to the process working directory)
-            to extract the artifact into. Default: ./concord/
+            to extract the artifact into (default: ./concord/)
         </li>
         <li><code>url</code> <i>(string, required)</i> &mdash; artifact URL in the format
             mvn://groupId:artifactId:version. Only JAR and ZIP archives are supported
