--- a/src/test/resources/documentation/profiles.html
+++ b/src/test/resources/documentation/profiles.html
@@ -2,4 +2,4 @@
     <pre>profiles</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Profile definitions. Each key is a profile name with its own configuration, flows, and forms.</p></div>
+    <p>Profile definitions. Each key is a profile name with its own configuration, flows, and forms</p></div>
