--- a/src/test/resources/documentation/triggers.exclusive.html
+++ b/src/test/resources/documentation/triggers.exclusive.html
@@ -19,7 +19,7 @@
                 <li><code>cancelOld</code> &mdash; Cancel older running processes in the same group when a new process
                     starts
                 </li>
-                <li><code>wait</code> &mdash; Allow only one process in the same group to run New processes wait until
+                <li><code>wait</code> &mdash; Allow only one process in the same group to run; new processes wait until
                     the current one finishes
                 </li>
             </ul>
