--- a/src/test/resources/documentation/triggers.exclusive.mode.html
+++ b/src/test/resources/documentation/triggers.exclusive.mode.html
@@ -11,8 +11,8 @@
         <li><code>cancelOld</code> <i>(string)</i> &mdash; cancel older running processes in the same group when a new
             process starts
         </li>
-        <li><code>wait</code> <i>(string)</i> &mdash; allow only one process in the same group to run New processes wait
-            until the current one finishes
+        <li><code>wait</code> <i>(string)</i> &mdash; allow only one process in the same group to run; new processes
+            wait until the current one finishes
         </li>
     </ul>
 </div>
