--- a/src/test/resources/documentation/triggers.github.conditions.branch.html
+++ b/src/test/resources/documentation/triggers.github.conditions.branch.html
@@ -2,4 +2,4 @@
     <pre>branch</pre>
 </div>
 <div class='content'><p>Type: <code>regexp</code></p>
-    <p>Branch name. Default: is the current repository branch</p></div>
+    <p>Branch name (default: current repository branch)</p></div>
