--- a/src/test/resources/documentation/triggers.github.conditions.html
+++ b/src/test/resources/documentation/triggers.github.conditions.html
@@ -5,15 +5,14 @@
     <p>Conditions for GitHub event matching</p>
     <p><b>Keys:</b></p>
     <ul>
-        <li><code>branch</code> <i>(regexp)</i> &mdash; branch name. Default: is the current repository branch</li>
+        <li><code>branch</code> <i>(regexp)</i> &mdash; branch name (default: current repository branch)</li>
         <li><code>files</code> <i>(object)</i> &mdash; list of file path patterns to match changed files in the event
         </li>
         <li><code>githubHost</code> <i>(regexp)</i> &mdash; gitHub host name</li>
-        <li><code>githubOrg</code> <i>(regexp)</i> &mdash; gitHub organization name. Default: is the current repository
-            organization
+        <li><code>githubOrg</code> <i>(regexp)</i> &mdash; gitHub organization name (default: current repository
+            organization)
         </li>
-        <li><code>githubRepo</code> <i>(regexp)</i> &mdash; gitHub repository name. Default: is the current repository
-            name
+        <li><code>githubRepo</code> <i>(regexp)</i> &mdash; gitHub repository name (default: current repository name)
         </li>
         <li><code>payload</code> <i>(object)</i> &mdash; key value conditions that must match fields in the GitHub event
             payload
