--- a/src/test/resources/documentation/triggers.github.html
+++ b/src/test/resources/documentation/triggers.github.html
@@ -15,12 +15,12 @@
         <li><code>exclusive</code> <i>(object)</i> &mdash; exclusive execution configuration for the process. Available
             only for processes running in projects
         </li>
-        <li><code>ignoreEmptyPush</code> <i>(boolean)</i> &mdash; if true skip empty push notifications where after and
-            before commit IDs are the same. Default: true
+        <li><code>ignoreEmptyPush</code> <i>(boolean)</i> &mdash; if true, skip empty push notifications where after and
+            before commit IDs are the same (default: true)
         </li>
-        <li><code>useEventCommitId</code> <i>(boolean)</i> &mdash; if true use the event commit ID to start the process
+        <li><code>useEventCommitId</code> <i>(boolean)</i> &mdash; if true, use the event commit ID to start the process
         </li>
-        <li><code>useInitiator</code> <i>(boolean)</i> &mdash; if true set the process initiator to the event sender
+        <li><code>useInitiator</code> <i>(boolean)</i> &mdash; if true, set the process initiator to the event sender
         </li>
         <li><code>version</code> <i>(integer, required)</i> &mdash; gitHub trigger version</li>
     </ul>
