--- a/src/test/resources/documentation/triggers.github.useInitiator.html
+++ b/src/test/resources/documentation/triggers.github.useInitiator.html
@@ -2,4 +2,4 @@
     <pre>useInitiator</pre>
 </div>
 <div class='content'><p>Type: <code>boolean</code></p>
-    <p>If true set the process initiator to the event sender</p></div>
+    <p>If true, set the process initiator to the event sender</p></div>
