--- a/src/test/resources/documentation/triggers.html
+++ b/src/test/resources/documentation/triggers.html
@@ -2,4 +2,4 @@
     <pre>triggers</pre>
 </div>
 <div class='content'><p>Type: <code>object[]</code></p>
-    <p>Trigger definitions. A list of triggers that can start the process automatically.</p></div>
+    <p>Trigger definitions. A list of triggers that can start the process automatically</p></div>
