--- a/src/test/resources/documentation/flows.flowName.log.html
+++ b/src/test/resources/documentation/flows.flowName.log.html
@@ -2,7 +2,7 @@
     <pre>log</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Log step. Logs a message or expression value to the process log.</p>
+    <p>Log step. Logs a message or expression value to the process log</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>log</code> <i>(string, required)</i> &mdash; message to log</li>
@@ -10,4 +10,5 @@
         <li><code>name</code> <i>(string)</i> &mdash; step display name</li>
     </ul>
     <p><b>Example:</b></p>
-    <pre><code>- log: "Hello, world!"</code></pre></div>
+    <pre><code>- log: "Hello, world!"</code></pre>
+</div>
