--- a/src/test/resources/documentation/flows.flowName.logYaml.html
+++ b/src/test/resources/documentation/flows.flowName.logYaml.html
@@ -2,7 +2,7 @@
     <pre>logYaml</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Log step (YAML). Logs a structured YAML value to the process log.</p>
+    <p>Log step (YAML). Logs a structured YAML value to the process log</p>
     <p><b>Keys:</b></p>
     <ul>
         <li><code>logYaml</code> <i>(string, required)</i> &mdash; expression to log as YAML</li>
@@ -10,4 +10,5 @@
         <li><code>name</code> <i>(string)</i> &mdash; step display name</li>
     </ul>
     <p><b>Example:</b></p>
-    <pre><code>- logYaml: ${myVar}</code></pre></div>
+    <pre><code>- logYaml: ${myVar}</code></pre>
+</div>
