--- a/src/test/resources/documentation/imports.git.version.html
+++ b/src/test/resources/documentation/imports.git.version.html
@@ -2,4 +2,4 @@
     <pre>version</pre>
 </div>
 <div class='content'><p>Type: <code>string</code></p>
-    <p>Branch, tag, or commit ID to use. Default: master</p></div>
+    <p>Branch, tag, or commit ID to use (default: master)</p></div>
