--- a/src/test/resources/documentation/profiles.profileName.flows.html
+++ b/src/test/resources/documentation/profiles.profileName.flows.html
@@ -2,4 +2,4 @@
     <pre>flows</pre>
 </div>
 <div class='content'><p>Type: <code>object</code></p>
-    <p>Flow definitions. Each key is a flow name mapping to a list of steps.</p></div>
+    <p>Flow definitions. Each key is a flow name mapping to a list of steps</p></div>
