--- a/src/test/resources/documentation/triggers.github.conditions.githubOrg.html
+++ b/src/test/resources/documentation/triggers.github.conditions.githubOrg.html
@@ -2,4 +2,4 @@
     <pre>githubOrg</pre>
 </div>
 <div class='content'><p>Type: <code>regexp</code></p>
-    <p>GitHub organization name. Default: is the current repository organization</p></div>
+    <p>GitHub organization name (default: current repository organization)</p></div>
