--- a/src/test/resources/documentation/triggers.github.conditions.githubRepo.html
+++ b/src/test/resources/documentation/triggers.github.conditions.githubRepo.html
@@ -2,4 +2,4 @@
     <pre>githubRepo</pre>
 </div>
 <div class='content'><p>Type: <code>regexp</code></p>
-    <p>GitHub repository name. Default: is the current repository name</p></div>
+    <p>GitHub repository name (default: current repository name)</p></div>
