--- a/src/test/resources/documentation/triggers.github.ignoreEmptyPush.html
+++ b/src/test/resources/documentation/triggers.github.ignoreEmptyPush.html
@@ -2,4 +2,4 @@
     <pre>ignoreEmptyPush</pre>
 </div>
 <div class='content'><p>Type: <code>boolean</code></p>
-    <p>If true skip empty push notifications where after and before commit IDs are the same. Default: true</p></div>
+    <p>If true, skip empty push notifications where after and before commit IDs are the same (default: true)</p></div>
