--- a/src/test/resources/documentation/triggers.github.useEventCommitId.html
+++ b/src/test/resources/documentation/triggers.github.useEventCommitId.html
@@ -2,4 +2,4 @@
     <pre>useEventCommitId</pre>
 </div>
 <div class='content'><p>Type: <code>boolean</code></p>
-    <p>If true use the event commit ID to start the process</p></div>
+    <p>If true, use the event commit ID to start the process</p></div>
