--- a/src/test/resources/documentation/forms.html
+++ b/src/test/resources/documentation/forms.html
@@ -3,7 +3,7 @@
 </div>
 <div class='content'><p>Type: <code>object</code></p>
     <p>Declares web-based forms used by flows to collect user input. Each form is defined under a name; the name is used
-        to reference the form from flows and as the object that stores submitted field values.</p>
+        to reference the form from flows and as the object that stores submitted field values.
     <p>Form definitions can be reused within the same process, and fields can also be defined dynamically at
         runtime.</p>
     <p><b>Note:</b> form names may contain only alphanumerics, whitespaces, underscores (<code>_</code>) signs</p>
