yaml meta type immutable

--- a/src/test/resources/documentation/flows.flowName.switch.html
+++ b/src/test/resources/documentation/flows.flowName.switch.html
@@ -3,6 +3,10 @@
 </div>
 <div class='content'><p>Type: <code>object</code></p>
     <p>Switch step. Evaluates an expression and executes the matching case branch</p>
+    <p><b>Keys:</b></p>
+    <ul>
+        <li><code>switch</code> <i>(expression, required)</i> &mdash; concord expression (e.g. ${myVar})</li>
+    </ul>
     <p><b>Example:</b></p>
     <pre><code>- switch: ${action}
   start:
