all params for `in`

--- a/src/test/resources/documentation/flowcall-inparam.all.html
+++ b/src/test/resources/documentation/flowcall-inparam.all.html
@@ -2,5 +2,11 @@
     <pre>in</pre>
 </div>
 <div class='content'><p>Type: <code>expression|object</code></p>
-    <p>Input parameters</p></div>
-    <list of params like `keys`>
+    <p>Input parameters</p>
+    <p><b>Keys:</b></p>
+    <ul>
+        <li><code>count</code> <i>(integer|expression, required)</i></li>
+        <li><code>prefix</code> <i>(string|expression)</i> &mdash; file prefix filter</li>
+        <li><code>s3Bucket</code> <i>(string|expression, required)</i> &mdash; s3 bucket name</li>
+    </ul>
+</div>
