add documentation support for task values and task input parameters

--- a/src/test/resources/documentation/task/strictTask.html
+++ b/src/test/resources/documentation/task/strictTask.html
@@ -1,7 +1,7 @@
 <div class='definition'>
     <pre>strictTask</pre>
 </div>
-<div class='content'><p>An HTTP client task for making web requests</p>
+<div class='content'><p>an HTTP client task for making web requests</p>
     <p><b>Input Parameters:</b></p>
     <ul>
         <li><code>url</code> <i>(string, required)</i> &mdash; URL to fetch</li>
@@ -13,11 +13,11 @@
                 <li><code>DELETE</code></li>
             </ul>
         </li>
-        <li><code>debug</code> <i>(boolean)</i> &mdash; Enable debug mode</li>
+        <li><code>debug</code> <i>(boolean)</i> &mdash; enable debug mode</li>
     </ul>
     <p><b>Output Parameters:</b></p>
     <ul>
-        <li><code>ok</code> <i>(boolean, required)</i> &mdash; Whether the request succeeded</li>
-        <li><code>body</code> <i>(string)</i> &mdash; Response body</li>
+        <li><code>ok</code> <i>(boolean, required)</i> &mdash; whether the request succeeded</li>
+        <li><code>body</code> <i>(string)</i> &mdash; response body</li>
     </ul>
 </div>
