add batchSize and batchFlushInterval to events configuration

--- a/src/test/resources/documentation/configuation.events.html
+++ b/src/test/resources/documentation/configuation.events.html
@@ -6,6 +6,14 @@
         events</p>
     <p><b>Keys:</b></p>
     <ul>
+        <li><code>batchFlushInterval</code> <i>(integer)</i> &mdash; maximum time (in seconds) before a queued event
+            batch is flushed. Ensures events from long-running steps (e.g. ansible) are reported promptly. Default is 15
+            seconds
+        </li>
+        <li><code>batchSize</code> <i>(integer)</i> &mdash; maximum number of process events to queue before flushing
+            the batch synchronously. Default value of 1 disables batching (each event is reported individually).
+            Increase to enable batching and reduce API load
+        </li>
         <li><code>inVarsBlacklist</code> <i>(string[])</i> &mdash; list of input variable names to exclude from
             recording
         </li>
