add updateMetaOnAllEvents to events configuration (#146)

--- a/src/test/resources/documentation/configuation.events.html
+++ b/src/test/resources/documentation/configuation.events.html
@@ -35,5 +35,8 @@
         <li><code>truncateMaxStringLength</code> <i>(integer)</i> &mdash; maximum string length before truncation</li>
         <li><code>truncateMeta</code> <i>(boolean)</i> &mdash; truncate recorded metadata</li>
         <li><code>truncateOutVars</code> <i>(boolean)</i> &mdash; truncate recorded output variables</li>
+        <li><code>updateMetaOnAllEvents</code> <i>(boolean)</i> &mdash; if true, process metadata is sent to the server
+            on every event. If false, metadata is updated only on process termination or suspend
+        </li>
     </ul>
 </div>
