--- a/src/test/resources/documentation/triggers.exclusive.html
+++ b/src/test/resources/documentation/triggers.exclusive.html
@@ -13,13 +13,13 @@
         </li>
         <li><code>mode</code> <i>(string)</i> &mdash; conflict resolution mode (default: cancel)
             <ul>
-                <li><code>cancel</code> &mdash; Cancel all new processes if there is already a running process in the
+                <li><code>cancel</code> &mdash; cancel all new processes if there is already a running process in the
                     same group
                 </li>
-                <li><code>cancelOld</code> &mdash; Cancel older running processes in the same group when a new process
+                <li><code>cancelOld</code> &mdash; cancel older running processes in the same group when a new process
                     starts
                 </li>
-                <li><code>wait</code> &mdash; Allow only one process in the same group to run; new processes wait until
+                <li><code>wait</code> &mdash; allow only one process in the same group to run; new processes wait until
                     the current one finishes
                 </li>
             </ul>
