--- a/src/test/resources/documentation/flows.flowName.task.loop.html
+++ b/src/test/resources/documentation/flows.flowName.task.loop.html
@@ -8,8 +8,8 @@
         <li><code>items</code> <i>(expression|any[]|object, required)</i> &mdash; collection to iterate over</li>
         <li><code>mode</code> <i>(string)</i> &mdash; execution mode
             <ul>
-                <li><code>serial</code> &mdash; Execute items sequentially, one at a time</li>
-                <li><code>parallel</code> &mdash; Execute items in parallel threads</li>
+                <li><code>serial</code> &mdash; execute items sequentially, one at a time</li>
+                <li><code>parallel</code> &mdash; execute items in parallel threads</li>
             </ul>
         </li>
         <li><code>parallelism</code> <i>(integer|expression)</i> &mdash; maximum number of parallel threads</li>
